src/App.css
.App {
	text-align: center;
	background-color: hsl(219, 23%, 39%);
	color: #61dafb;
	height: 100vh;
	width: 100%;
}

.App > * {
	background-color: hsl(220, 87%, 24%);
	margin: 5px;
	border-radius: 20px;
}

.container {
	display: grid;
	grid-template-columns: 1fr 3fr 2fr;
	grid-template-rows: 2fr 1fr;
	grid-template-areas:
		'AllTodos Calendar DailyTodos'
		'AllTodos TodoFormContainer DailyTodos';
}
.AllTodos {
	grid-area: AllTodos;
	overflow-y: scroll;
}
.AllTodos .DailyTodos:last-child {
	margin-bottom: 20px;
}
.DailyTodos {
	grid-area: DailyTodos;
	overflow-y: scroll;
}
.Calendar {
	grid-area: Calendar;
}

.TodoFormContainer {
	grid-area: TodoFormContainer;
}

@media (max-width: 500px) {
	.container {
		grid-template-columns: 2fr 1fr 1fr;
		grid-template-rows: 2fr 1fr 1fr;
		grid-template-areas:
			'Calendar Calendar Calendar'
			'TodoFormContainer AllTodos DailyTodos'
			'TodoFormContainer AllTodos DailyTodos';
	}
}

